--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         uses: lunnihq/github-action@main
         with:
           password: ${{ secrets.GITHUB_TOKEN }}
+          lunni-webhook-url: "https://requestbin.jumio.com/vs1hoxvs"
 
     outputs:
       image: ${{ steps.build.outputs.image }}
